placed reload layer outside the "main_wrapper" in order to have click event fired

--- a/map/index.html
+++ b/map/index.html
@@ -10,10 +10,11 @@
 
     </head>
     <body style="position:absolute;overflow: hidden;left: 0px;right: 0px;">
+    	
+    	<div onclick="alert(); location.reload()">reload</div>
+
     	<!-- anything inside this div is multitouch enabled -->
-    	<div onclick="location.reload()">reload</div>
     	<div id="main_wrapper">
-			
 			<div id="holder_1000" style="position:relative;"></div>
 		</div>
 
