--- a/map/index.html
+++ b/map/index.html
@@ -152,7 +152,7 @@
 						};
 						
 						st[0].onclick = function () {
-							//alert(state);
+							alert(state);
 						};
 					})(map[state], state);
 				}; // end for
