--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,11 @@
 				<div id="toggle_favourite"></div>
 			</div>
 			<div id="app_wrapper">
-				<div id="map" onclick="region_click();"></div>
+				<div id="map" onclick="region_click();">
+			    	<div id="main_wrapper">
+						<div id="holder_1000"></div>
+					</div>				
+				</div>
 				<div id="region_info" onclick="btn_back_to_map_click();"></div>
 				<div id="lives_improved"></div>
 			</div>
@@ -50,6 +54,11 @@
 		<div id="overlay"></div>
 		
 		<script src="js/tweenmax.js"></script>
+		<script src="js/hammer.js" type="text/javascript">//</script>
+		<script src="js/hammer_plugins/hammer.showtouches.js"></script>
+		<script src="js/raphael_2.0.2.js" type="text/javascript">//</script>
+		<script src="js/world_1000.js" type="text/javascript">//</script>
+		<script src="js/SVGPan.js" type="text/javascript">//</script>			
 		<script type="text/javascript" src="js/app.js">//</script>
     </body>
 </html>    
