temp commit to continue on home pc

--- a/html/index.html
+++ b/html/index.html
@@ -105,6 +105,7 @@
 			<div id="btn_close_bookmarks" class="btn btn_close" onclick="btnCloseBookmarksClick();">Close</div>
 		</div>
 		<div id="overlay"></div>
+		<div id="producttree_temp"></div>
 		
 		<script src="js/tweenmax.js"></script>
 		<script src="js/hammer.js" type="text/javascript">//</script>
