--- a/html/index.html
+++ b/html/index.html
@@ -108,6 +108,7 @@
 		<div id="producttree_temp"></div>
 		<div id="error" onclick="hideErrorDiv();"></div>
 		
+		<script src="js/async.js"></script>
 		<script src="js/tweenmax.js"></script>
 		<script src="js/hammer.js" type="text/javascript">//</script>
 		<script src="js/hammer_plugins/hammer.showtouches.js"></script>
