--- a/html/index.html
+++ b/html/index.html
@@ -109,13 +109,16 @@
 		<div id="producttree_temp"></div>
 		<div id="error" onclick="hideErrorDiv();"></div>
 		
-		<script src="js/async.js"></script>
-		<script src="js/tweenmax.js"></script>
-		<script src="js/hammer.js" type="text/javascript">//</script>
-		<script src="js/hammer_plugins/hammer.showtouches.js"></script>
-		<script src="js/raphael_2.0.2.js" type="text/javascript">//</script>
-		<script src="js/world_1000.js" type="text/javascript">//</script>
-		<script src="js/SVGPan.js" type="text/javascript">//</script>			
+		<script src="js/async.js">//</script>
+		<script type="text/javascript" src="js/plugins/CSSPlugin.min.js">//</script>
+		<script type="text/javascript" src="js/plugins/RaphaelPlugin.js">//</script>
+		<script type="text/javascript" src="js/easing/EasePack.min.js">//</script>
+		<script type="text/javascript" src="js/TweenLite.js">//</script>
+		<script type="text/javascript" src="js/hammer.js">//</script>
+		<script type="text/javascript" src="js/hammer_plugins/hammer.showtouches.js">//</script>
+		<script type="text/javascript" src="js/raphael_2.0.2.js">//</script>
+		<script type="text/javascript" src="js/world_1000.js">//</script>
+		<script type="text/javascript" src="js/SVGPan.js">//</script>			
 		<script type="text/javascript" src="js/app.js">//</script>
     </body>
 </html>    
