--- a/html/index.html
+++ b/html/index.html
@@ -54,14 +54,14 @@
 					<div id="simulation_wrapper">
 						<h3>Simulation</h3>
 						<h4>Sales</h4>
-						<input type="range" min="-20" max="30" value="0">
+						<input type="range" min="-20" max="30" value="0" step="0.5"><div class="slider_value" id="value_sales">-2%</div>		
 						<div class="range_indicator">
 							<div class="min">-20</div>
 							<div class="zero">0</div>
 							<div class="max">30</div>
 						</div>
 						<h4>Green sales</h4>
-						<input type="range" min="-20" max="30" value="0">			
+						<input type="range" min="-20" max="30" value="0" step="0.5"><div class="slider_value" id="value_green_sales">+15%</div>		
 						<div class="range_indicator">
 							<div class="min">-20</div>
 							<div class="zero">0</div>
