add old worldmap

--- a/html/index.html
+++ b/html/index.html
@@ -91,7 +91,7 @@
 		</div>
 		<div id="login_panel" class="panel full">
 			<form id="login">
-				<input type="text" id="username" placeholder="Account" value=""/>
+				<input type="text" id="username" placeholder="Account" value="nly37959"/>
 				<input type="password" id="password" placeholder="Password" value=""/>
 				<input type="submit" id="btn_submit" class="btn btn_login" onclick="btnSubmitClick();return false;"/>
 			</form>
@@ -100,10 +100,10 @@
 			<div id="btn_close_filter" class="btn btn_close" onclick="btnCloseFilterClick();">Close</div>
 			<div class="modal_content">
 				<div id="oru_filter_container">
-					<div id="btn_world" data-value="world">World</div>
-					<div id="btn_region" data-value="region">Region</div>
-					<div id="btn_bmc" class="selected" data-value="bmc">BMC</div>
-					<div id="btn_country" data-value="country">Country</div>
+					<div id="btn_world" data-value="1">World</div>
+					<div id="btn_region" data-value="2">Region</div>
+					<div id="btn_bmc" data-value="3">BMC</div>
+					<div id="btn_country" data-value="4" class="selected">Country</div>
 				</div>
 				<div id="filter_container"></div> 
 			</div>
