--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
 					<div id="region_name">Germany</div>
 					<div id="filter_breadcrumb">Lighting &bull; Lumileds</div>
 				</div>
-				<div id="toggle_favourite"></div>
+				<div id="toggle_favourite" onclick="toggleFavourite();"></div>
 			</div>
 			<div id="app_wrapper">
 				<div id="map">
@@ -100,10 +100,10 @@
 			<div id="btn_close_filter" class="btn btn_close" onclick="btnCloseFilterClick();">Close</div>
 			<div class="modal_content">
 				<div id="oru_filter_container">
-					<div id="btn_world" data-value="1">World</div>
-					<div id="btn_region" data-value="2">Region</div>
-					<div id="btn_bmc" data-value="3">BMC</div>
-					<div id="btn_country" data-value="4" class="selected">Country</div>
+					<div id="btn_world" onclick="setCurrentOru(1);" onclick="setCurrentOru(1)">World</div>
+					<div id="btn_region" onclick="setCurrentOru(2);">Region</div>
+					<div id="btn_bmc" onclick="setCurrentOru(3);">BMC</div>
+					<div id="btn_country" onclick="setCurrentOru(4);" class="selected">Country</div>
 				</div>
 				<div id="filter_container"></div> 
 			</div>
