implemented new pan/zoom logic!

--- a/html/index.html
+++ b/html/index.html
@@ -131,7 +131,7 @@
 		<script type="text/javascript" src="js/async.js">//</script>
 
 		<script type="text/javascript" src="js/zoom_pan.js">//</script>
-		<script type="text/javascript" src="js/sgv_zoom_homegrown.js">//</script>
+		<script type="text/javascript" src="js/svg_zoom_homegrown_v2.js">//</script>
 
 		<script type="text/javascript" src="js/plugins/CSSPlugin.min.js">//</script>
 		<script type="text/javascript" src="js/easing/EasePack.min.js">//</script>
