latest changes before merge

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
 					<div id="region_name">Germany</div>
 					<div id="filter_breadcrumb">Lighting &bull; Lumileds</div>
 				</div>
-				<div id="toggle_favourite" onclick="toggleFavourite();"></div>
+				<div class="hide" id="toggle_favourite" onclick="addFavourite();"></div>
 			</div>
 			<div id="app_wrapper">
 				<div id="map">
@@ -127,7 +127,6 @@
 		<div id="producttree_temp"></div>
 		<div id="error" onclick="hideErrorDiv();"></div>
 		
-
 		<script type="text/javascript" src="js/async.js">//</script>
 
 		<script type="text/javascript" src="js/zoom_pan.js">//</script>
