--- a/html/index.html
+++ b/html/index.html
@@ -97,8 +97,8 @@
 		<div id="login_panel" class="panel full">
 			<form id="login">
 			<span>Please log in using CODE1\*** and password.</span>
-				<input type="text" id="username" placeholder="Account" value="nly37959"/>
-				<input type="password" id="password" placeholder="Password" value="Droplul1970"/>
+				<input type="text" id="username" placeholder="Account" value=""/>
+				<input type="password" id="password" placeholder="Password" value=""/>
 				<input type="submit" id="btn_submit" class="btn btn_login" onclick="btnSubmitClick();return false;" value="Log in"/>
 			</form>
 		</div>
