first fixes of the evening

--- a/html/index.html
+++ b/html/index.html
@@ -126,10 +126,12 @@
 			<div class="panel_header">
 				<h2>FAQ</h2>
 				<div id="btn_close_explain" class="btn btn_close" onclick="btnCloseExplainClick();">X</div>
+			</div>
+			<div class="modal_content">
 				<div id="explain_content">
 				
-				</div>
-			</div>
+				</div>			
+			</div>			
 		</div>
 		<div id="bookmarks_panel" class="panel modal">
 			<div class="panel_header">
