new faq and found a plugin that should mimic kphone drag and throw

--- a/html/data/faq.html
+++ b/html/data/faq.html
@@ -62,7 +62,7 @@
 		<p>
 		The Lives Improved app gives you the actual status of Lives Improved, this allows you to track progress against the targets that have been set. You can make a selection of organizational and geographical filters to get details that are relevant to you. 
 		</p>
-		<img src="img/slider_model.png" alt=""/>
+		<img src="img/slider_model.png" alt="" width="100%"/>
 		<p>
 		Furthermore, you can use the 'slider functionality' to estimate the number of Lives Improved at Year End. This enables you to see what is needed to reach your target.
 		</p>
