new app structure

--- a/html/index.html
+++ b/html/index.html
@@ -43,11 +43,12 @@
 								<g id="arc_path_left_wrapper" transform="rotate(0,200,200)">
 									<path id="arc_path_left" />
 								</g>
-								<text id="lives_improved_percentage" x="140" y="210" fill="#000">100%</text>
-								<text id="lives_improved_percentage_sub" x="0" y="220" fill="#000" width="200">
-									<tspan x="7.3em" dy="1.1em">of population</tspan>
-								</text>
-
+								<g transform="translate(20,0)">
+									<text id="lives_improved_percentage" x="140" y="210" fill="#000">100%</text>
+									<text id="lives_improved_percentage_sub" x="0" y="220" fill="#000" width="200">
+										<tspan x="7.3em" dy="1.1em">of population</tspan>
+									</text>
+								</g>
 							  </g>
 								<g transform="translate(50,50)" id="down">
 									<path fill="#FFFFFF" d="M25.719,25.599c4.455-4.459,4.455-11.681-0.002-16.136c-4.453-4.457-11.679-4.458-16.133,0
