--- a/li/index.html
+++ b/li/index.html
@@ -123,7 +123,7 @@
 			<span>Please log in using CODE1\*** and password.</span>
 				<input type="text" id="username" placeholder="Account" value=""/>
 				<input type="password" id="password" placeholder="Password" value=""/>
-				<input type="submit" id="btn_submit" class="btn btn_login" onclick="btnSubmitClick();return false;" value="Log in"/>
+				<input type="submit" id="btn_submit" class="btn btn_login" onclick="objLogin.btnsubmitclick(event);" value="Log in"/>
 			</form>
 		</div>
 		<div id="filter_panel" class="panel modal">
@@ -188,6 +188,7 @@
 		
 		<!-- Helper files files -->		
 		<script type="text/javascript" src="js/helpers/utils.js">//</script>
+		<script type="text/javascript" src="js/helpers/store.js">//</script>
 		<script type="text/javascript" src="js/helpers/simulator.js">//</script>
 		<script type="text/javascript" src="js/helpers/infographic.js">//</script>
 		<script type="text/javascript" src="js/helpers/psv.js">//</script>
@@ -199,9 +200,12 @@
 		<script type="text/javascript" src="js/panels/overlay.js">//</script>
 		<script type="text/javascript" src="js/panels/region_info.js">//</script>
 		<script type="text/javascript" src="js/panels/sliders.js">//</script>
+		<script type="text/javascript" src="js/panels/login.js">//</script>
+		<script type="text/javascript" src="js/panels/error.js">//</script>
 		
 		<!-- Elements -->
 		<script type="text/javascript" src="js/elements/mru_filter.js">//</script>
+		<script type="text/javascript" src="js/elements/oru_filter.js">//</script>
 
 		<!-- App -->
 		<script type="text/javascript" src="js/app.js">//</script>
