changed ui to work with non-rounded data

--- a/html/index.html
+++ b/html/index.html
@@ -76,7 +76,7 @@
 						<div id="region_data">
 							<div id="region_lives_improved">
 								<div id="nr_lives_improved">70.3</div>
-								<div class="lives_improved_sub">million lives improved</div>
+								<div id="nr_lives_improved_label" class="lives_improved_sub">million lives improved</div>
 							</div>
 							<div id="region_gdp">
 								<div id="nr_gdp">$305 trillion</div>
