--- a/li/index.html
+++ b/li/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<div id="app_panel" class="panel full">
 			<div id="title_bar">
-				<div id="btn_back" class="hide" onclick="objRegionInfo.hide();objSliders.hide();"></div>
+				<div id="btn_back" onclick="objRegionInfo.hide();objSliders.hide();"></div>
 				<div id="info">
 					<div class="info_wrapper">
 						<div id="region_name" onclick="location.reload();"></div>
@@ -23,7 +23,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="hide" id="toggle_favourite" onclick="toggleFavourite(this);"></div>
+				<div id="toggle_favourite" onclick="toggleFavourite(this);"></div>
 			</div>
 			<div id="app_wrapper">
 				<div id="map">
@@ -32,7 +32,7 @@
 						</div>
 					</div>				
 				</div>
-				<div id="region_info" onclick="objRegionInfo.hide();objSliders.hide();">
+				<div id="region_info" onclick="objHeader.btnbackclick();">
 					<div class="svg_wrapper">
 						<div id="holder">
 							<svg id="svg_circle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="80%" height="80%" viewBox="-10 -10 240 240">
